convert number to text

--- a/QLHD/Control_BLL/Control_BLL.csproj
+++ b/QLHD/Control_BLL/Control_BLL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Control_HangHoa.cs" />
     <Compile Include="Control_HoaDon.cs" />
     <Compile Include="Control_KhachHang.cs" />
+    <Compile Include="Control_Login.cs" />
     <Compile Include="Control_NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
