--- a/QLHD/Model_DAL/Model_DAL.csproj
+++ b/QLHD/Model_DAL/Model_DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Model_Data.cs" />
     <Compile Include="NhanVien_Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaiKhoan_Model.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
